lab2/Code/syntax.output
State 18 conflicts: 1 shift/reduce
State 23 conflicts: 2 shift/reduce
State 36 conflicts: 2 shift/reduce
State 38 conflicts: 11 shift/reduce
State 68 conflicts: 11 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI
   10       | Specifier error CompSt
   11       | Specifier ExtDecList error SEMI
   12       | Specifier ExtDecList

   13 ExtDecList: VarDec
   14           | VarDec COMMA ExtDecList

   15 Specifier: TYPE
   16          | StructSpecifier

   17 StructSpecifier: STRUCT OptTag LC DefList RC
   18                | STRUCT Tag

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | error LP RP
   28       | ID LP error RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec
   31        | error COMMA VarList
   32        | ParamDec COMMA error

   33 ParamDec: Specifier VarDec
   34         | error VarDec
   35         | Specifier error

   36 CompSt: LC DefList StmtList RC
   37       | error RC
   38       | LC DefList StmtList

   39 StmtList: Stmt StmtList
   40         | %empty

   41 Stmt: Exp SEMI
   42     | CompSt
   43     | RETURN Exp SEMI
   44     | IF LP Exp RP Stmt
   45     | IF LP Exp RP Stmt ELSE Stmt
   46     | WHILE LP Exp RP Stmt
   47     | IF LP error RP Stmt
   48     | IF LP error RP Stmt ELSE Stmt
   49     | WHILE LP error RP Stmt
   50     | IF error
   51     | WHILE error
   52     | RETURN error SEMI
   53     | Exp error SEMI
   54     | Exp error
   55     | RETURN Exp error
   56     | error SEMI
   57     | error ELSE Stmt

   58 DefList: Def DefList
   59        | %empty

   60 Def: Specifier DecList SEMI
   61    | Specifier error SEMI
   62    | Specifier DecList error

   63 DecList: Dec
   64        | Dec COMMA DecList
   65        | error COMMA DecList
   66        | Dec COMMA error

   67 Dec: VarDec
   68    | VarDec ASSIGNOP Exp
   69    | VarDec ASSIGNOP error

   70 Exp: Exp ASSIGNOP Exp
   71    | Exp AND Exp
   72    | Exp OR Exp
   73    | Exp RELOP Exp
   74    | Exp PLUS Exp
   75    | Exp MINUS Exp
   76    | Exp STAR Exp
   77    | Exp DIV Exp
   78    | LP Exp RP
   79    | MINUS Exp
   80    | NOT Exp
   81    | ID LP Args RP
   82    | ID LP RP
   83    | Exp LB Exp RB
   84    | Exp DOT ID
   85    | ID
   86    | INT
   87    | FLOAT
   88    | Exp ASSIGNOP error
   89    | ID LP error RP
   90    | ID LP error
   91    | Exp LB error RB
   92    | Exp LB Exp error

   93 Args: Exp COMMA Args
   94     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 11 24 27 28 31 32 34 35 37 47 48 49 50 51 52 53
    54 55 56 57 61 62 65 66 69 88 89 90 91 92
LOWER_THAN_ANYTHING (258)
INT (259) 23 86
FLOAT (260) 87
ID (261) 19 21 22 25 26 28 81 82 84 85 89 90
COMMA (262) 14 29 31 32 64 65 66 93
TYPE (263) 15
LC (264) 17 36 38
RC (265) 17 36 37
STRUCT (266) 17 18
RETURN (267) 43 52 55
IF (268) 44 45 47 48 50
WHILE (269) 46 49 51
LOWER_THAN_ELSE (270)
ELSE (271) 45 48 57
ASSIGNOP (272) 68 69 70 88
OR (273) 72
AND (274) 71
RELOP (275) 73
PLUS (276) 74
MINUS (277) 75 79
STAR (278) 76
DIV (279) 77
NOT (280) 80
LOWER_THAN_RP (281)
LP (282) 25 26 27 28 44 45 46 47 48 49 78 81 82 89 90
RP (283) 25 26 27 28 44 45 46 47 48 49 78 81 82 89
LB (284) 23 24 83 91 92
RB (285) 23 24 83 91
DOT (286) 84
LOWER_THAN_SEMI (287)
SEMI (288) 4 5 7 8 9 11 41 43 52 53 56 60 61


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
ExtDefList (36)
    on left: 2 3, on right: 1 2
ExtDef (37)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2
ExtDecList (38)
    on left: 13 14, on right: 4 11 12 14
Specifier (39)
    on left: 15 16, on right: 4 5 6 7 9 10 11 12 33 35 60 61 62
StructSpecifier (40)
    on left: 17 18, on right: 16
OptTag (41)
    on left: 19 20, on right: 17
Tag (42)
    on left: 21, on right: 18
VarDec (43)
    on left: 22 23 24, on right: 13 14 23 24 33 34 67 68 69
FunDec (44)
    on left: 25 26 27 28, on right: 6 7
VarList (45)
    on left: 29 30 31 32, on right: 25 29 31
ParamDec (46)
    on left: 33 34 35, on right: 29 30 32
CompSt (47)
    on left: 36 37 38, on right: 6 10 42
StmtList (48)
    on left: 39 40, on right: 36 38 39
Stmt (49)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57, on right:
    39 44 45 46 47 48 49 57
DefList (50)
    on left: 58 59, on right: 17 36 38 58
Def (51)
    on left: 60 61 62, on right: 58
DecList (52)
    on left: 63 64 65 66, on right: 60 62 64 65
Dec (53)
    on left: 67 68 69, on right: 63 64 66
Exp (54)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92, on right: 41 43 44 45 46 53 54 55 68 70 71 72 73
    74 75 76 77 78 79 80 83 84 88 91 92 93 94
Args (55)
    on left: 93 94, on right: 81 93


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   15 Specifier: TYPE .

    $default  reduce using rule 15 (Specifier)


State 3

   17 StructSpecifier: STRUCT . OptTag LC DefList RC
   18                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    9       | Specifier . error SEMI
   10       | Specifier . error CompSt
   11       | Specifier . ExtDecList error SEMI
   12       | Specifier . ExtDecList

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   16 Specifier: StructSpecifier .

    $default  reduce using rule 16 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 11

   17 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   18 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 18 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    9 ExtDef: Specifier error . SEMI
   10       | Specifier error . CompSt
   27 FunDec: error . LP RP

    error  shift, and go to state 22
    LC     shift, and go to state 23
    LP     shift, and go to state 24
    SEMI   shift, and go to state 25

    CompSt  go to state 26


State 16

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   28       | ID . LP error RP

    LP  shift, and go to state 27

    $default  reduce using rule 22 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI
   11       | Specifier ExtDecList . error SEMI
   12       | Specifier ExtDecList .

    error  shift, and go to state 28
    SEMI   shift, and go to state 29

    $end    reduce using rule 12 (ExtDef)
    error   [reduce using rule 12 (ExtDef)]
    TYPE    reduce using rule 12 (ExtDef)
    STRUCT  reduce using rule 12 (ExtDef)


State 19

   13 ExtDecList: VarDec .
   14           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB

    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    $default  reduce using rule 13 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 22
    LC     shift, and go to state 23
    SEMI   shift, and go to state 32

    CompSt  go to state 33


State 21

   17 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 59 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 22

   37 CompSt: error . RC

    RC  shift, and go to state 37


State 23

   36 CompSt: LC . DefList StmtList RC
   38       | LC . DefList StmtList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    TYPE      [reduce using rule 59 (DefList)]
    STRUCT    [reduce using rule 59 (DefList)]
    $default  reduce using rule 59 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 36


State 24

   27 FunDec: error LP . RP

    RP  shift, and go to state 39


State 25

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 26

   10 ExtDef: Specifier error CompSt .

    $default  reduce using rule 10 (ExtDef)


State 27

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   28       | ID LP . error RP

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 41

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 44


State 28

   11 ExtDef: Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 45


State 29

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 30

   14 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 46

    ExtDecList  go to state 47
    VarDec      go to state 19


State 31

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 32

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 33

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 34

   60 Def: Specifier . DecList SEMI
   61    | Specifier . error SEMI
   62    | Specifier . DecList error

    error  shift, and go to state 50
    ID     shift, and go to state 46

    VarDec   go to state 51
    DecList  go to state 52
    Dec      go to state 53


State 35

   17 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 54


State 36

   58 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    TYPE      [reduce using rule 59 (DefList)]
    STRUCT    [reduce using rule 59 (DefList)]
    $default  reduce using rule 59 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 36


State 37

   37 CompSt: error RC .

    $default  reduce using rule 37 (CompSt)


State 38

   36 CompSt: LC DefList . StmtList RC
   38       | LC DefList . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    LC      shift, and go to state 23
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    $end    reduce using rule 40 (StmtList)
    error   [reduce using rule 40 (StmtList)]
    INT     [reduce using rule 40 (StmtList)]
    FLOAT   [reduce using rule 40 (StmtList)]
    ID      [reduce using rule 40 (StmtList)]
    TYPE    reduce using rule 40 (StmtList)
    LC      [reduce using rule 40 (StmtList)]
    RC      reduce using rule 40 (StmtList)
    STRUCT  reduce using rule 40 (StmtList)
    RETURN  [reduce using rule 40 (StmtList)]
    IF      [reduce using rule 40 (StmtList)]
    WHILE   [reduce using rule 40 (StmtList)]
    ELSE    reduce using rule 40 (StmtList)
    MINUS   [reduce using rule 40 (StmtList)]
    NOT     [reduce using rule 40 (StmtList)]
    LP      [reduce using rule 40 (StmtList)]

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 39

   27 FunDec: error LP RP .

    $default  reduce using rule 27 (FunDec)


State 40

   28 FunDec: ID LP error . RP
   31 VarList: error . COMMA VarList
   34 ParamDec: error . VarDec

    ID     shift, and go to state 46
    COMMA  shift, and go to state 70
    RP     shift, and go to state 71

    VarDec  go to state 72


State 41

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 42

   33 ParamDec: Specifier . VarDec
   35         | Specifier . error

    error  shift, and go to state 73
    ID     shift, and go to state 46

    VarDec  go to state 74


State 43

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 75


State 44

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .
   32        | ParamDec . COMMA error

    COMMA  shift, and go to state 76

    $default  reduce using rule 30 (VarList)


State 45

   11 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 11 (ExtDef)


State 46

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 47

   14 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 14 (ExtDecList)


State 48

   24 VarDec: VarDec LB error . RB

    RB  shift, and go to state 77


State 49

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 78


State 50

   61 Def: Specifier error . SEMI
   65 DecList: error . COMMA DecList

    COMMA  shift, and go to state 79
    SEMI   shift, and go to state 80


State 51

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   67 Dec: VarDec .
   68    | VarDec . ASSIGNOP Exp
   69    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 81
    LB        shift, and go to state 31

    $default  reduce using rule 67 (Dec)


State 52

   60 Def: Specifier DecList . SEMI
   62    | Specifier DecList . error

    error  shift, and go to state 82
    SEMI   shift, and go to state 83


State 53

   63 DecList: Dec .
   64        | Dec . COMMA DecList
   66        | Dec . COMMA error

    COMMA  shift, and go to state 84

    $default  reduce using rule 63 (DecList)


State 54

   17 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 17 (StructSpecifier)


State 55

   58 DefList: Def DefList .

    $default  reduce using rule 58 (DefList)


State 56

   37 CompSt: error . RC
   56 Stmt: error . SEMI
   57     | error . ELSE Stmt

    RC    shift, and go to state 37
    ELSE  shift, and go to state 85
    SEMI  shift, and go to state 86


State 57

   86 Exp: INT .

    $default  reduce using rule 86 (Exp)


State 58

   87 Exp: FLOAT .

    $default  reduce using rule 87 (Exp)


State 59

   81 Exp: ID . LP Args RP
   82    | ID . LP RP
   85    | ID .
   89    | ID . LP error RP
   90    | ID . LP error

    LP  shift, and go to state 87

    $default  reduce using rule 85 (Exp)


State 60

   43 Stmt: RETURN . Exp SEMI
   52     | RETURN . error SEMI
   55     | RETURN . Exp error

    error  shift, and go to state 88
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 89


State 61

   44 Stmt: IF . LP Exp RP Stmt
   45     | IF . LP Exp RP Stmt ELSE Stmt
   47     | IF . LP error RP Stmt
   48     | IF . LP error RP Stmt ELSE Stmt
   50     | IF . error

    error  shift, and go to state 90
    LP     shift, and go to state 91


State 62

   46 Stmt: WHILE . LP Exp RP Stmt
   49     | WHILE . LP error RP Stmt
   51     | WHILE . error

    error  shift, and go to state 92
    LP     shift, and go to state 93


State 63

   79 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 94


State 64

   80 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 95


State 65

   78 Exp: LP . Exp RP

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 96


State 66

   42 Stmt: CompSt .

    $default  reduce using rule 42 (Stmt)


State 67

   36 CompSt: LC DefList StmtList . RC
   38       | LC DefList StmtList .

    RC  shift, and go to state 97

    $default  reduce using rule 38 (CompSt)


State 68

   39 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    LC      shift, and go to state 23
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    $end    reduce using rule 40 (StmtList)
    error   [reduce using rule 40 (StmtList)]
    INT     [reduce using rule 40 (StmtList)]
    FLOAT   [reduce using rule 40 (StmtList)]
    ID      [reduce using rule 40 (StmtList)]
    TYPE    reduce using rule 40 (StmtList)
    LC      [reduce using rule 40 (StmtList)]
    RC      reduce using rule 40 (StmtList)
    STRUCT  reduce using rule 40 (StmtList)
    RETURN  [reduce using rule 40 (StmtList)]
    IF      [reduce using rule 40 (StmtList)]
    WHILE   [reduce using rule 40 (StmtList)]
    ELSE    reduce using rule 40 (StmtList)
    MINUS   [reduce using rule 40 (StmtList)]
    NOT     [reduce using rule 40 (StmtList)]
    LP      [reduce using rule 40 (StmtList)]

    CompSt    go to state 66
    StmtList  go to state 98
    Stmt      go to state 68
    Exp       go to state 69


State 69

   41 Stmt: Exp . SEMI
   53     | Exp . error SEMI
   54     | Exp . error
   70 Exp: Exp . ASSIGNOP Exp
   71    | Exp . AND Exp
   72    | Exp . OR Exp
   73    | Exp . RELOP Exp
   74    | Exp . PLUS Exp
   75    | Exp . MINUS Exp
   76    | Exp . STAR Exp
   77    | Exp . DIV Exp
   83    | Exp . LB Exp RB
   84    | Exp . DOT ID
   88    | Exp . ASSIGNOP error
   91    | Exp . LB error RB
   92    | Exp . LB Exp error

    error     shift, and go to state 99
    ASSIGNOP  shift, and go to state 100
    OR        shift, and go to state 101
    AND       shift, and go to state 102
    RELOP     shift, and go to state 103
    PLUS      shift, and go to state 104
    MINUS     shift, and go to state 105
    STAR      shift, and go to state 106
    DIV       shift, and go to state 107
    LB        shift, and go to state 108
    DOT       shift, and go to state 109
    SEMI      shift, and go to state 110


State 70

   31 VarList: error COMMA . VarList

    error   shift, and go to state 111
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 112
    ParamDec         go to state 44


State 71

   28 FunDec: ID LP error RP .

    $default  reduce using rule 28 (FunDec)


State 72

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   34 ParamDec: error VarDec .

    LB  shift, and go to state 31

    $default  reduce using rule 34 (ParamDec)


State 73

   35 ParamDec: Specifier error .

    $default  reduce using rule 35 (ParamDec)


State 74

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   33 ParamDec: Specifier VarDec .

    LB  shift, and go to state 31

    $default  reduce using rule 33 (ParamDec)


State 75

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 76

   29 VarList: ParamDec COMMA . VarList
   32        | ParamDec COMMA . error

    error   shift, and go to state 113
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 114
    ParamDec         go to state 44


State 77

   24 VarDec: VarDec LB error RB .

    $default  reduce using rule 24 (VarDec)


State 78

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 79

   65 DecList: error COMMA . DecList

    error  shift, and go to state 115
    ID     shift, and go to state 46

    VarDec   go to state 51
    DecList  go to state 116
    Dec      go to state 53


State 80

   61 Def: Specifier error SEMI .

    $default  reduce using rule 61 (Def)


State 81

   68 Dec: VarDec ASSIGNOP . Exp
   69    | VarDec ASSIGNOP . error

    error  shift, and go to state 117
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 118


State 82

   62 Def: Specifier DecList error .

    $default  reduce using rule 62 (Def)


State 83

   60 Def: Specifier DecList SEMI .

    $default  reduce using rule 60 (Def)


State 84

   64 DecList: Dec COMMA . DecList
   66        | Dec COMMA . error

    error  shift, and go to state 119
    ID     shift, and go to state 46

    VarDec   go to state 51
    DecList  go to state 120
    Dec      go to state 53


State 85

   57 Stmt: error ELSE . Stmt

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    LC      shift, and go to state 23
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    CompSt  go to state 66
    Stmt    go to state 121
    Exp     go to state 69


State 86

   56 Stmt: error SEMI .

    $default  reduce using rule 56 (Stmt)


State 87

   81 Exp: ID LP . Args RP
   82    | ID LP . RP
   89    | ID LP . error RP
   90    | ID LP . error

    error  shift, and go to state 122
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    RP     shift, and go to state 123

    Exp   go to state 124
    Args  go to state 125


State 88

   52 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 126


State 89

   43 Stmt: RETURN Exp . SEMI
   55     | RETURN Exp . error
   70 Exp: Exp . ASSIGNOP Exp
   71    | Exp . AND Exp
   72    | Exp . OR Exp
   73    | Exp . RELOP Exp
   74    | Exp . PLUS Exp
   75    | Exp . MINUS Exp
   76    | Exp . STAR Exp
   77    | Exp . DIV Exp
   83    | Exp . LB Exp RB
   84    | Exp . DOT ID
   88    | Exp . ASSIGNOP error
   91    | Exp . LB error RB
   92    | Exp . LB Exp error

    error     shift, and go to state 127
    ASSIGNOP  shift, and go to state 100
    OR        shift, and go to state 101
    AND       shift, and go to state 102
    RELOP     shift, and go to state 103
    PLUS      shift, and go to state 104
    MINUS     shift, and go to state 105
    STAR      shift, and go to state 106
    DIV       shift, and go to state 107
    LB        shift, and go to state 108
    DOT       shift, and go to state 109
    SEMI      shift, and go to state 128


State 90

   50 Stmt: IF error .

    $default  reduce using rule 50 (Stmt)


State 91

   44 Stmt: IF LP . Exp RP Stmt
   45     | IF LP . Exp RP Stmt ELSE Stmt
   47     | IF LP . error RP Stmt
   48     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 129
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 130


State 92

   51 Stmt: WHILE error .

    $default  reduce using rule 51 (Stmt)


State 93

   46 Stmt: WHILE LP . Exp RP Stmt
   49     | WHILE LP . error RP Stmt

    error  shift, and go to state 131
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 132


State 94

   70 Exp: Exp . ASSIGNOP Exp
   71    | Exp . AND Exp
   72    | Exp . OR Exp
   73    | Exp . RELOP Exp
   74    | Exp . PLUS Exp
   75    | Exp . MINUS Exp
   76    | Exp . STAR Exp
   77    | Exp . DIV Exp
   79    | MINUS Exp .
   83    | Exp . LB Exp RB
   84    | Exp . DOT ID
   88    | Exp . ASSIGNOP error
   91    | Exp . LB error RB
   92    | Exp . LB Exp error

    STAR  shift, and go to state 106
    DIV   shift, and go to state 107
    LB    shift, and go to state 108
    DOT   shift, and go to state 109

    $default  reduce using rule 79 (Exp)


State 95

   70 Exp: Exp . ASSIGNOP Exp
   71    | Exp . AND Exp
   72    | Exp . OR Exp
   73    | Exp . RELOP Exp
   74    | Exp . PLUS Exp
   75    | Exp . MINUS Exp
   76    | Exp . STAR Exp
   77    | Exp . DIV Exp
   80    | NOT Exp .
   83    | Exp . LB Exp RB
   84    | Exp . DOT ID
   88    | Exp . ASSIGNOP error
   91    | Exp . LB error RB
   92    | Exp . LB Exp error

    LB   shift, and go to state 108
    DOT  shift, and go to state 109

    $default  reduce using rule 80 (Exp)


State 96

   70 Exp: Exp . ASSIGNOP Exp
   71    | Exp . AND Exp
   72    | Exp . OR Exp
   73    | Exp . RELOP Exp
   74    | Exp . PLUS Exp
   75    | Exp . MINUS Exp
   76    | Exp . STAR Exp
   77    | Exp . DIV Exp
   78    | LP Exp . RP
   83    | Exp . LB Exp RB
   84    | Exp . DOT ID
   88    | Exp . ASSIGNOP error
   91    | Exp . LB error RB
   92    | Exp . LB Exp error

    ASSIGNOP  shift, and go to state 100
    OR        shift, and go to state 101
    AND       shift, and go to state 102
    RELOP     shift, and go to state 103
    PLUS      shift, and go to state 104
    MINUS     shift, and go to state 105
    STAR      shift, and go to state 106
    DIV       shift, and go to state 107
    RP        shift, and go to state 133
    LB        shift, and go to state 108
    DOT       shift, and go to state 109


State 97

   36 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 36 (CompSt)


State 98

   39 StmtList: Stmt StmtList .

    $default  reduce using rule 39 (StmtList)


State 99

   53 Stmt: Exp error . SEMI
   54     | Exp error .

    SEMI  shift, and go to state 134

    $default  reduce using rule 54 (Stmt)


State 100

   70 Exp: Exp ASSIGNOP . Exp
   88    | Exp ASSIGNOP . error

    error  shift, and go to state 135
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 136


State 101

   72 Exp: Exp OR . Exp
